--- a/template-front/index.html
+++ b/template-front/index.html
@@ -193,7 +193,17 @@
       <h1>Olá, <span id="user-name">visitante</span>!</h1>
       <p id="user-email"></p>
     </div>
-    
+    <script>
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+        window.onload = function(){{
+            signOut();
+        }
+    </script>
 </body>
 
 </html>
